--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-MY_SQL.url = jdbc:mysql://localhost:3306/employees
+MY_SQL.url = jdbc:mysql://localhost:3306/banking_system
 MY_SQL.username = root
 MY_SQL.password = 08princeAli
 
